recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.error
SplitHanoi2:19: error: recursive method aux needs result type
  	aux(height-1, aux+0, src, dst2, other, dst1)
        ^